<resources>
    <string name="app_name">Helpicky</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="email">電子郵件：</string>
    <string name="password">密碼：</string>
    <string name="username">暱稱：</string>
    <string name="sign_up">註冊</string>
    <string name="login">登入</string>
    <string name="skip">直接使用</string>
    <string name="confirm">確定</string>
    <string name="hotproduct">熱門商品</string>
    <string name="healthset">健康組合</string>
    <string name="settings">設定</string>
    <string name="diary">日記</string>
    <string name="recommendation">推薦</string>
    <string name="achievement">成就</string>
    <string name="communicate">聯絡我們</string>

</resources>
