<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/diary"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/diary" />
        <item
            android:id="@+id/recommendation"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/recommendation" />
        <item
            android:id="@+id/achievement"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/achievement" />
        <item
            android:id="@+id/communicate"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/communicate" />
    </group>

</menu>
